CW-1367 Fixed white space issue

--- a/src/shared/ui-kit/TextEditor/components/Element/Element.module.scss
+++ b/src/shared/ui-kit/TextEditor/components/Element/Element.module.scss
@@ -39,4 +39,5 @@
   display: inline-block;
   font-size: inherit;
   color: $c-pink-mention;
+  white-space: pre-wrap;
 }
